--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ PORT=3001
 NODE_ENV=development
 
 # CORS
-CORS_ORIGIN=http://localhost:5174
+CORS_ORIGIN=https://splendorous-horse-bc3f10.netlify.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
